# dad-research-tool

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
config/: items.json  settings.example.json
resources/: launcher.rc
src/: main.cpp
src/core/: config.cpp  config.h  integrity.cpp  integrity.h  integrity_hashes.h  manual_mapper.cpp  manual_mapper.h  pattern_scanner.cpp  pattern_scanner.h  process.cpp  process.h  syscalls.h
src/game/: actor_manager.cpp  actor_manager.h  entity.h  item_database.cpp  item_database.h
src/launcher/: dad_theme.h  dashboard_window.cpp  dashboard_window.h  launcher_main.cpp
src/launcher/panels/: game_status_panel.cpp  game_status_panel.h  injector_panel.cpp  injector_panel.h  log_panel.cpp  log_panel.h  offset_panel.cpp  offset_panel.h  settings_panel.cpp  settings_panel.h  tool_launcher_panel.cpp  tool_launcher_panel.h
src/launcher/util/: dll_injector.cpp  dll_injector.h  driver_detector.h  log_buffer.h  process_launcher.cpp  process_launcher.h
src/proxy/: version.def  version_proxy.cpp
src/render/: drawing.cpp  drawing.h  imgui_manager.cpp  imgui_manager.h  menu.cpp  menu.h  overlay.cpp  overlay.h  world_to_screen.cpp  world_to_screen.h
src/sdk/: gnames.cpp  gnames.h  gworld.cpp  gworld.h  ue5_types.h
src/shared/: shared_memory.h
tools/: generate_hashes.py  inject.cpp
